--- a/package.json
+++ b/package.json
@@ -2,23 +2,23 @@
   "name": "chathaven-frontend",
   "version": "1.0.0",
   "description": "Frontend for ChatHaven",
-  "main": "client.js",
+  "main": "App.jsx",
   "scripts": {
     "start": "vite",
-    "build": "vite build",
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
-    "axios": "^1.3.0",
     "zustand": "^4.2.0",
-    "socket.io-client": "^4.5.1"
+    "axios": "^1.3.0"
   },
   "devDependencies": {
     "vite": "^4.0.0"
   },
-  "author": "chathaven-dev-team",
+  "author": "ChatHaven-devteam",
   "license": "MIT"
 }
