--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,24 @@
-# Node.js Dependencies
-node_modules/
-package-lock.json
-
-# Environment Variables (Secrets)
-.env
-
 # Logs
-logs/
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# OS System Files
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
-
-# Editor/IDE Files
-.vscode/
-.idea/
-*.swp
-
-# Build Files
-/dist/
-/.cache/
-out/
-
-# Frontend-Specific
-frontend/node_modules/
-frontend/package-lock.json
-frontend/.env
-frontend/build/
-frontend/dist/
-
-# Backend-Specific
-backend/node_modules/
-backend/package-lock.json
-backend/.env
-backend/build/
-backend/dist/
-
-# NPM and Debug Files
-.npm/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
