--- a/package.json
+++ b/package.json
@@ -37,11 +37,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "jsdom": "^22.1.0",
     "vite": "^6.0.5",
-    "vitest": "^1.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "jsdom": "^22.1.0"
+    "vitest": "^1.0.0"
   }
 }
